@@ -1,4 +1,8 @@
 ---
+
+* [Bug 1412] m4/os_cflags.m4 caches results that depend on $CC.
+
+---
 (4.2.6) 2009/12/09 Released by Harlan Stenn <stenn@ntp.org>
 * Include (4.2.4p8) - [Sec 1331] DoS with mode 7 packets - CVE-2009-3563.
 * [Bug 508] Fixed leap second handling for Windows.
